--- a/frontend/src/components/auth/signup.html
+++ b/frontend/src/components/auth/signup.html
@@ -1,7 +1,32 @@
+
+
 <div class="container" ng-controller="signupCtrl" ng-init="init()">
+  <loading-component is-loading="isLoading" loading-text="Signing up user...."></loading-component>
   <div class="row" style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
+   
       <div class="col-lg-4 col-md-6 col-sm-8 col-xs-10">
-          <form id="userForm" name="userForm" ng-submit="signup()" novalidate class="panel panel-default">
+         
+          <!-- Verification Message -->
+          <div class="panel panel-success" ng-if="showVerificationMessage">
+              <div class="panel-heading text-center">
+                  <h3 class="panel-title">
+                      <i class="glyphicon glyphicon-envelope"></i> Verification Email Sent
+                  </h3>
+              </div>
+              <div class="panel-body text-center">
+                  <p class="lead">Thank you for signing up!</p>
+                  <p>A verification email has been sent to:</p>
+                  <p><strong>{{userEmail}}</strong></p>
+                  <p>Please check your email and click on the verification link to complete your registration.</p>
+                  <div class="alert alert-info" role="alert">
+                      <i class="glyphicon glyphicon-info-sign"></i>
+                      If you don't see the email in your inbox, please check your spam folder.
+                  </div>
+              </div>
+          </div>
+
+          <!-- Signup Form -->
+          <form id="userForm" name="userForm" ng-submit="signup()" novalidate class="panel panel-default" ng-if="!showVerificationMessage">
               <div class="panel-heading text-center">
                   <h3 class="panel-title">Sign Up</h3>
               </div>
@@ -10,7 +35,7 @@
                   <div class="form-group">
                       <label for="firstName">First Name:</label>
                       <input type="text" class="form-control" id="firstName" name="firstName"
-                          placeholder="Enter your first name" ng-model="firstName" required>
+                          placeholder="Enter your first name" ng-model="formData.firstName" required>
                       <span class="text-danger" ng-show="userForm.firstName.$error.required && userForm.firstName.$touched">
                           First Name is required.
                       </span>
@@ -19,7 +44,7 @@
                   <div class="form-group">
                       <label for="lastName">Last Name:</label>
                       <input type="text" class="form-control" id="lastName" name="lastName"
-                          placeholder="Enter your last name" ng-model="lastName" required>
+                          placeholder="Enter your last name" ng-model="formData.lastName" required>
                       <span class="text-danger" ng-show="userForm.lastName.$error.required && userForm.lastName.$touched">
                           Last Name is required.
                       </span>
@@ -28,7 +53,7 @@
                   <div class="form-group">
                       <label for="username">Username:</label>
                       <input type="text" class="form-control" id="username" name="username"
-                          placeholder="Enter your username" ng-model="username" required ng-minlength="5">
+                          placeholder="Enter your username" ng-model="formData.username" required ng-minlength="5">
                       <span class="text-danger" ng-show="userForm.username.$error.required && userForm.username.$touched">
                           Username is required.
                       </span>
@@ -40,7 +65,7 @@
                   <div class="form-group">
                       <label for="email">Email:</label>
                       <input type="email" class="form-control" id="email" name="email"
-                          placeholder="Enter a valid email" ng-model="email" required>
+                          placeholder="Enter a valid email" ng-model="formData.email" required>
                       <span class="text-danger" ng-show="userForm.email.$error.required && userForm.email.$touched">
                           Email is required.
                       </span>
@@ -51,8 +76,15 @@
 
                   <div class="form-group">
                       <label for="password">Password:</label>
-                      <input type="password" class="form-control" id="password" name="password"
-                          placeholder="Enter a password" ng-model="password" required ng-minlength="6">
+                      <div class="input-group">
+                          <input type="{{ showPassword ? 'text' : 'password' }}" class="form-control" id="password" name="password"
+                              placeholder="Enter a password" ng-model="formData.password" required ng-minlength="6">
+                          <span class="input-group-btn">
+                              <button type="button" class="btn btn-default" ng-click="showPassword = !showPassword">
+                                  <i class="glyphicon" ng-class="{'glyphicon-eye-open': !showPassword, 'glyphicon-eye-close': showPassword}"></i>
+                              </button>
+                          </span>
+                      </div>
                       <span class="text-danger" ng-show="userForm.password.$error.required && userForm.password.$touched">
                           Password is required.
                       </span>
@@ -63,19 +95,26 @@
 
                   <div class="form-group">
                       <label for="confirm-password">Confirm Password:</label>
-                      <input type="password" class="form-control" id="confirm-password" name="confirmPassword"
-                          placeholder="Confirm your password" ng-model="confirmPassword" required>
+                      <div class="input-group">
+                          <input type="{{ showConfirmPassword ? 'text' : 'password' }}" class="form-control" id="confirm-password" name="confirmPassword"
+                              placeholder="Confirm your password" ng-model="formData.confirmPassword" required>
+                          <span class="input-group-btn">
+                              <button type="button" class="btn btn-default" ng-click="showConfirmPassword = !showConfirmPassword">
+                                  <i class="glyphicon" ng-class="{'glyphicon-eye-open': !showConfirmPassword, 'glyphicon-eye-close': showConfirmPassword}"></i>
+                              </button>
+                          </span>
+                      </div>
                       <span class="text-danger" ng-show="userForm.confirmPassword.$error.required && userForm.confirmPassword.$touched">
                           Confirm Password is required.
                       </span>
-                      <span class="text-danger" ng-show="confirmPassword !== password && userForm.confirmPassword.$touched">
+                      <span class="text-danger" ng-show="formData.confirmPassword !== formData.password && userForm.confirmPassword.$touched">
                           Passwords do not match.
                       </span>
                   </div>
 
                   <div class="form-group">
                     <label for="city">City:</label>
-                    <select class="form-control" id="city" name="city" ng-model="city" required>
+                    <select class="form-control" id="city" name="city" ng-model="formData.city" required>
                         <option value="" disabled selected>Select your city</option>
                         <option ng-repeat="city in cities" value="{{city}}">{{city}}</option>
                     </select>
@@ -87,7 +126,7 @@
                   <div class="form-group">
                       <label for="adhaar">Aadhaar Number:</label>
                       <input type="number" class="form-control" id="adhaar" name="adhaar"
-                          placeholder="Enter Aadhaar number" ng-model="adhaar" required ng-pattern="/^\d{12}$/">
+                          placeholder="Enter Aadhaar number" ng-model="formData.adhaar" required ng-pattern="/^\d{12}$/">
                       <span class="text-danger" ng-show="userForm.adhaar.$error.required && userForm.adhaar.$touched">
                           Aadhaar number is required.
                       </span>
@@ -105,6 +144,8 @@
                   </button>
               </div>
           </form>
+        
+
       </div>
   </div>
 </div>
