--- a/frontend/src/components/booking/ownerBookings/confirmedBookings.html
+++ b/frontend/src/components/booking/ownerBookings/confirmedBookings.html
@@ -3,12 +3,6 @@
 <div ng-controller="confirmedBookingsCtrl" class="container-fluid" ng-init="init()">
     <h1 class="text-center text-primary" ng-if="allBookings.length > 0">Confirmed Bookings</h1>
     <h3 class="text-center text-muted" ng-if="allBookings.length === 0">No bookings available</h3>
-
-    <div class="text-center" ng-show="isLoading">
-        <i class="fa fa-spinner fa-spin fa-3x"></i>
-        <p>Loading...</p>
-    </div>
-
     <div class="panel panel-default">
         <div class="panel-heading">
             <strong>🔍 Search by Booking Type:</strong>
@@ -33,7 +27,7 @@
         <table class="table table-striped table-bordered">
             <thead>
                 <tr class="text-center">
-                    <th>Booking ID</th>
+
                     <th>User</th>
                     <th>Total Amount</th>
                     <th>Start Date</th>
@@ -43,8 +37,8 @@
             </thead>
             <tbody>
                 <tr ng-repeat="booking in allBookings | orderBy: '-createdAt'">
-                    <td>{{ booking._id | limitTo: 8 }}...</td>
-                    <td>{{ booking.from.firstName }} {{ booking.from.lastName }}</td>
+
+                    <td>{{booking.from.username}}</td>
                     <td>${{ booking.calculate() }}</td>
                     <td>{{ booking.startDate | date: 'yyyy-MM-dd' }}</td>
                     <td>{{ booking.endDate | date: 'yyyy-MM-dd' }}</td>
