--- a/frontend/src/components/booking/userBookings/myBiddings.html
+++ b/frontend/src/components/booking/userBookings/myBiddings.html
@@ -50,7 +50,7 @@
         </div>
     </div>
 
-    <!-- Biddings Table -->
+    
     <div class="row" ng-show="bookings.length > 0">
         <div class="col-xs-12">
             <div class="panel panel-default">
@@ -69,7 +69,7 @@
                             </thead>
                             <tbody>
                                 <tr ng-repeat="booking in bookings">
-                                    <!-- Car Details -->
+
                                     <td>
                                         <p class="lead margin-bottom-5">{{ booking.vehicle.company }} {{ booking.vehicle.name }} {{ booking.vehicle.modelYear }}</p>
                                         <small class="text-muted">
@@ -118,8 +118,12 @@
 
                                     <!-- Addons -->
                                     <td>
-                                        <p class="margin-bottom-5" ng-repeat="addon in booking.selectedAddons">
+
+                                        <p class="margin-bottom-5" ng-repeat="addon in booking.selectedAddons" ng-if="booking.selectedAddons">
                                             {{ addon.name }}
+                                        </p>
+                                        <p ng-if="booking.selectedAddons.length === 0">
+                                            N/A
                                         </p>
                                     </td>
                                 </tr>
